<?xml version="1.0" encoding="UTF-8"?><!--  Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->

<resources>
    <!-- Decimal separator (e.g. "1.23"). [CHAR_LIMIT=1] -->
    <string name="dec_point">.</string>


    <!-- Natural logarithm function (e.g. "ln(2)"). [CHAR_LIMIT=3] -->
    <string name="fun_ln">ln</string>
    <!-- Logarithm function (e.g. "log(10)"). [CHAR_LIMIT=3] -->
    <string name="fun_log">log</string>


    <!-- Clear operation to clear the currently entered expression. [CHAR_LIMIT=3] -->
    <string name="clr">clr</string>

    <!-- Content Descriptions -->
    <eat-comment />

    <!-- Content description for 'e' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_const_e">Euler\'s number</string>
    <!-- Content description for 'π' button. [CHAR_LIMIT=NONE] -->


    <!-- Content description for '.' button. [CHAR_LIMIT=NONE] -->

    <!-- Content description for '(' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_lparen">left parenthesis</string>
    <!-- Content description for ')' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_rparen">right parenthesis</string>

    <!-- Content description for 'cos' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_fun_cos">cosine</string>
    <!-- Content description for 'ln' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_fun_ln">natural logarithm</string>
    <!-- Content description for 'log' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_fun_log">logarithm</string>
    <!-- Content description for 'sin' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_fun_sin">sine</string>
    <!-- Content description for 'tan' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_fun_tan">tangent</string>

    <!-- Content description for '+' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_op_add">plus</string>
    <!-- Content description for '÷' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_op_div">divide</string>
    <!-- Content description for '!' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_op_fact">factorial</string>
    <!-- Content description for '×' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_op_mul">times</string>
    <!-- Content description for '^' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_op_pow">power</string>
    <!-- Content description for '√' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_op_sqrt">square root</string>
    <!-- Content description for '-' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_op_sub">minus</string>

    <!-- Content description for "clr" button. [CHAR_LIMIT=NONE] -->
    <string name="desc_clr">clear</string>
    <!-- Content description for "del" button. [CHAR_LIMIT=NONE] -->
    <string name="desc_del">delete</string>
    <!-- Content description for '=' button. [CHAR_LIMIT=NONE] -->
    <string name="desc_eq">equals</string>


    <string name="app_name" msgid="8095131950334945205">"ماشین حساب"</string>
    <string name="error" msgid="9197457880925804499">"خطا"</string>
    <string name="digit0" msgid="8069590963464434135">"0"</string>
    <string name="digit00" msgid="8069590963464434135">"00"</string>
    <string name="digit000" msgid="8069590963464434135">"000"</string>
    <string name="digit1" msgid="8535041374797804029">"1"</string>
    <string name="digit2" msgid="8977354203154316247">"2"</string>
    <string name="digit3" msgid="148544090755132760">"3"</string>
    <string name="digit4" msgid="2199490603838247678">"4"</string>
    <string name="digit5" msgid="7568514524384173087">"5"</string>
    <string name="digit6" msgid="6705952561049362551">"6"</string>
    <string name="digit7" msgid="658125644218958447">"7"</string>
    <string name="digit8" msgid="3134686906411558886">"8"</string>
    <string name="digit9" msgid="765379157698748031">"9"</string>
    <string name="del" msgid="6248896117422989693">"حذف"</string>
    <string name="clear" msgid="8103610981407459768">"پاک"</string>
    <string name="fun_sin" msgid="6793866152659175277">"sin"</string>
    <string name="fun_cos" msgid="6901841853098114414">"cos"</string>
    <string name="fun_tan" msgid="7957459816738554960">"tan"</string>
    <string name="desc_const_pi">pi</string>
    <string name="panel_advanced" msgid="7122495413742976492">"پانل پیشرفته"</string>
    <string name="text_copied_toast" msgid="5801480710472541833">"نوشتار کپی شد."</string>

</resources>
