<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <ir.esfandune.calculatorlibe.SolidPadLayout
        style="@style/PadLayoutStyle.Numeric"
        android:columnCount="3"

        android:rowCount="5">

        <Button
            android:id="@+id/dlteAll"
            style="@style/PadButtonStyle.FloatingCalc"
            android:text="@string/C"
            android:textColor="@color/calculator_error_color" />



        <Button
            android:id="@+id/digit_"
            style="@style/PadButtonStyle.FloatingCalc"
            android:text=""
            android:textColor="@color/calculator_error_color" />

        <ImageView
            android:id="@+id/clr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:padding="15dp"
            android:src="@drawable/ic_c_rmv_char" />


        <Button
            android:id="@+id/digit_7"
            style="@style/PadButtonStyle.FloatingCalc"
            android:text="@string/digit7" />

        <Button
            android:id="@+id/digit_8"
            style="@style/PadButtonStyle.FloatingCalc"

            android:text="@string/digit8" />

        <Button
            android:id="@+id/digit_9"
            style="@style/PadButtonStyle.FloatingCalc"
            android:text="@string/digit9" />

        <Button
            android:id="@+id/digit_4"
            style="@style/PadButtonStyle.FloatingCalc"
            android:text="@string/digit4" />

        <Button
            android:id="@+id/digit_5"
            style="@style/PadButtonStyle.FloatingCalc"
            android:text="@string/digit5" />

        <Button
            android:id="@+id/digit_6"
            style="@style/PadButtonStyle.FloatingCalc"
            android:text="@string/digit6" />

        <Button
            android:id="@+id/digit_1"
            style="@style/PadButtonStyle.FloatingCalc"
            android:text="@string/digit1" />

        <Button
            android:id="@+id/digit_2"
            style="@style/PadButtonStyle.FloatingCalc"
            android:text="@string/digit2" />

        <Button
            android:id="@+id/digit_3"
            style="@style/PadButtonStyle.FloatingCalc"
            android:text="@string/digit3" />

        <Button
            android:id="@+id/dot"
            style="@style/PadButtonStyle.FloatingCalc"
            android:text="," />

        <Button
            android:id="@+id/digit_0"
            style="@style/PadButtonStyle.FloatingCalc"
            android:text="@string/digit0" />

        <Button
            android:id="@+id/eq"
            style="@style/PadButtonStyle.FloatingCalc"
            android:contentDescription="@string/desc_eq"
            android:text="@string/eq" />

    </ir.esfandune.calculatorlibe.SolidPadLayout>

    <ir.esfandune.calculatorlibe.SolidPadLayout
        android:id="@+id/pad_operator"
        style="@style/PadLayoutStyle.Operator"

        android:columnCount="1"
        android:rowCount="5">

        <Button
            android:id="@+id/op_div"
            style="@style/PadButtonStyle.FloatingCalc"
            android:contentDescription="@string/desc_op_div"
            android:textColor="@color/calculator_error_color"
            android:text="@string/op_div" />

        <Button
            android:id="@+id/op_mul"
            style="@style/PadButtonStyle.FloatingCalc"
            android:contentDescription="@string/desc_op_mul"
            android:textColor="@color/calculator_error_color"
            android:text="@string/op_mul" />

        <Button
            android:id="@+id/op_sub"
            style="@style/PadButtonStyle.FloatingCalc"
            android:contentDescription="@string/desc_op_sub"
            android:textColor="@color/calculator_error_color"
            android:text="@string/op_sub" />

        <Button
            android:id="@+id/op_add"
            style="@style/PadButtonStyle.FloatingCalc"
            android:contentDescription="@string/desc_op_add"
                android:textColor="@color/calculator_error_color"
            android:text="@string/op_add" />

        <ImageView
            android:id="@+id/done"
            style="@style/PadButtonStyle.FloatingCalc"
            android:layout_margin="5dp"
            android:background="@drawable/circle_red"
            android:padding="5dp"
            android:src="@drawable/ic_done_c"
            />
    </ir.esfandune.calculatorlibe.SolidPadLayout>

</LinearLayout>
